@@ -39,6 +39,7 @@ require('scripts/reviver')
 require('scripts/tools')
 require('scripts/blueprinter')
 require('scripts/bpmirror')
+require('scripts/bpupdater')
 require('scripts/bpsnap')
 require('scripts/planners')
 require('scripts/zapper')
