@@ -223,7 +223,7 @@ local function add_empty_bp_to_book(event)
         if inv and inv.insert('picker-dummy-blueprint') then
             local slot, idx = inv.find_item_stack('picker-dummy-blueprint')
             if slot and idx and slot.set_stack('blueprint') then
-                stack.active_index = idx --! Factorio Bug .16.38 find_item_stack off by one
+                stack.active_index = idx
                 -- Cycling blueprints in books raises cursor changed event, lets emulate that.
                 script.raise_event(defines.events.on_player_cursor_stack_changed, {player_index = event.player_index})
             end
@@ -232,7 +232,7 @@ local function add_empty_bp_to_book(event)
 end
 Event.register('picker-add-empty-bp-to-book', add_empty_bp_to_book)
 
-local function clear_empty_bp(slot)
+local function _clear_empty_bp(slot)
     if slot.valid_for_read and not slot.is_blueprint_setup() then
         slot.clear()
     end
@@ -245,11 +245,11 @@ local function clean_empty_bps_in_book(event)
         if inv and not inv.is_empty() then
             local change_index = not (inv[stack.active_index].valid_for_read and inv[stack.active_index].is_blueprint_setup())
 
-            Inventory.each_reverse(inv, clear_empty_bp)
+            Inventory.each_reverse(inv, _clear_empty_bp)
 
             if change_index then
                 local _, idx = inv.find_item_stack('blueprint')
-                stack.active_index = idx or 1 --! Factorio Bug 16.38
+                stack.active_index = idx or 1
                 script.raise_event(defines.events.on_player_cursor_stack_changed, {player_index = event.player_index})
             end
         end
