@@ -123,6 +123,22 @@ data:extend {
         order = 'picker-g[last-put]-a'
     },
     {
+        type = 'string-setting',
+        name = 'picker-bp-updater-version-increment',
+        setting_type = 'runtime-per-user',
+        order = 'picker-f[1]',
+        default_value = 'auto',
+        allowed_values = {'off', 'auto', 'on'}
+    },
+    {
+        type = 'string-setting',
+        name = 'picker-bp-updater-alt-version-increment',
+        setting_type = 'runtime-per-user',
+        order = 'picker-f[2]',
+        default_value = 'on',
+        allowed_values = {'off', 'auto', 'on'}
+    },
+    {
         type = "bool-setting",
         name = "picker-bp-snap-cardinal-center",
         setting_type = "runtime-per-user",
