@@ -5,6 +5,7 @@ Date: ??????
     - Added Add empty blueprint to book hotkey. (linked to terrain size increase) will add and select an empty bp to the current book.
     - Added Remove empty blueprints from book. (linked to terrain size decrease) will remove all empty blueprints from the current book.
     - Added blueprint edge snapping (From Blueprint Extensions by Dewin).
+    - Added blueprint updater (From Blueprint Extensions by Dewin).
     - Added picker cheat recipes
     - Filter Fill now works on the player inventory.
     - Train Goto next station hotkey added.
